--- a/rag_llm_service/config/logging.conf
+++ b/rag_llm_service/config/logging.conf
@@ -1,1 +1,28 @@
+# config/logging.conf
+# Konfiguracja logowania dla mikroserwisu LLM
+
+[loggers]
+keys=root
+
+[handlers]
+keys=consoleHandler
+
+[formatters]
+keys=formatter
+
+[logger_root]
+level=DEBUG
+handlers=consoleHandler
+
+[handler_consoleHandler]
+class=StreamHandler
+level=DEBUG
+formatter=formatter
+args=(sys.stdout,)
+
+[formatter_formatter]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+
+
+
 #TODO: change template
