--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
 # Core dependencies
-langchain==0.1.20
-langchain-core==0.1.52
-langchain-community==0.0.38
-langchain-openai==0.1.7
-langchain-text-splitters==0.0.1
-openai
-tiktoken
-pandas
-numpy
+langchain==0.3.14
+langchain-core==0.3.29
+langchain-text-splitters==0.3.5
+langchain-openai>=0.1.7  # Dodano, aby uwzględnić brakujące zależności
+langchain-community
+langsmith==0.2.10
+openai==1.59.6
+tiktoken==0.8.0
+pandas==2.2.3
+numpy==1.26.4
 
 # Utilities
-python-dotenv
-requests
+python-dotenv==1.0.1
+requests==2.32.3
 
 # Development tools
-nest-asyncio
-tenacity
+nest-asyncio==1.6.0
+tenacity==8.5.0
+pydantic==2.10.5
+pydantic-core==2.27.2
