--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Core dependencies
-langchain==0.3.14
-langchain-core==0.3.29
-langchain-text-splitters==0.3.5
-langchain-openai>=0.1.7  # Dodano, aby uwzględnić brakujące zależności
-langchain-community
+langchain==0.3.0
+langchain-core==0.3.0
+langchain-text-splitters==0.3.0
+langchain-openai==0.1.7
+langchain-community==0.3.0
 langsmith==0.2.10
-openai==1.59.6
+openai==1.6.1
 tiktoken==0.8.0
 pandas==2.2.3
 numpy==1.26.4
@@ -17,10 +17,9 @@ requests==2.32.3
 # Development tools
 nest-asyncio==1.6.0
 tenacity==8.5.0
-pydantic==2.10.5
-pydantic-core==2.27.2
+pydantic==1.10.12
 
 # Files processing
-chromadb
-pymupdf
-unstructured
+chromadb==0.3.26
+pymupdf==1.22.5
+unstructured==0.8.1
