--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 # Core dependencies
-langchain==0.3.0
-langchain-core==0.3.0
-langchain-text-splitters==0.3.0
-langchain-openai==0.1.7
-langchain-community==0.3.0
-langsmith==0.2.10
-openai==1.6.1
-tiktoken==0.8.0
-pandas==2.2.3
-numpy==1.26.4
+langchain>=0.3.19,<0.4.0
+langchain-core>=0.3.35,<0.4.0
+langchain-text-splitters>=0.3.6,<0.4.0
+langchain-openai>=0.2.0,<0.3.0
+langchain-community>=0.3.18,<0.4.0
+langsmith>=0.1.17,<0.2.0
+openai>=1.6.1,<2.0.0
+tiktoken>=0.8.0,<0.9.0
+pandas>=2.2.3,<3.0.0
+numpy>=1.26.4,<2.0.0
 
 # Utilities
-python-dotenv==1.0.1
-requests==2.32.3
+python-dotenv>=1.0.1,<2.0.0
+requests>=2.32.3,<3.0.0
 
 # Development tools
-nest-asyncio==1.6.0
-tenacity==8.5.0
-pydantic==1.10.12
+nest-asyncio>=1.6.0,<2.0.0
+tenacity>=8.5.0,<9.0.0
+pydantic>=2.7.4,<3.0.0
 
 # Files processing
-chromadb==0.3.26
-pymupdf==1.22.5
-unstructured==0.8.1
+chromadb>=0.3.26,<0.4.0
+pymupdf>=1.22.5,<2.0.0
+unstructured>=0.8.1,<0.9.0
